--- a/views/index.ejs
+++ b/views/index.ejs
@@ -140,7 +140,7 @@
 					<ul>
 						<li><a href="#" id="about"><i class="fas fa-2x fa-arrow-up"></i></a></li>
 						<li><a href="https://github.com/genesisbarrios" target="_blank"><i class="fab fa-2x fa-github"></i></a></li>
-						<li><a href="https://www.linkedin.com/in/genesis-barrios-788a12114" target="_blank"><i class="fab fa-2x fa-linkedin"></i></a></li>
+						<li><a href="https://www.linkedin.com/in/genesis-barrios" target="_blank"><i class="fab fa-2x fa-linkedin"></i></a></li>
 						<li><a href="mailto:genesisbarriosdev@gmail.com"><i class="fas fa-2x fa-envelope"></i></a></li>
 					<ul>
 				</div>
@@ -152,10 +152,23 @@
 
 	<h1 id="projectsTitle">Projects</h1>
 	</div>
+
+	<section class="projects d-flex one">
+		<div class="project justify-content-center align-self-center">
+			<img src="https://dl.dropboxusercontent.com/s/h62cze48hc8jhi6nbvtya/stempo.png?rlkey=wtv3fvqea7btj80b6jia1fjds&dl=0" alt="PanaMia"/>
+			<h2>Stempo</h2>
+			<p class="serif" style="margin-bottom:2px;">October 2023 | ETH Lisbon</p>
+			<p class="serif content" style="font-size:0.8em; margin-bottom:2px;">Stempo was created at ETH Lisbon 2023, for the purpose of bringing music rights managements to web3. By using ERC-6551 Tokens it allows for musicians to Create Account NFTs out of their Music that can house individual stems, and allows their works to be packaged for license sale and/or royalty share in additional touch points including their music stems. Fans can collect and trade NFTs with royalties as well. Born at ETH Lisbon 2023, with many years of ideation from my part as I’m a musician and have always had interest in building music applications. </p>
+			
+			<div class="row" style="margin-bottom:5px;">
+				<a href="https://www.stempo.vercel.app" target="_blank" class="view-button"> View Website </a>
+			</div>
+		</div>
+	</section>
 	
 	<section class="projects d-flex one">
 		<div class="project justify-content-center align-self-center">
-			<img src="https://drive.google.com/uc?export=view&id=1orD2f4OU0JjPJEXeDH74KOmkdeszd1i4" alt="PanaMia"/>
+			<img src="https://dl.dropboxusercontent.com/s/lvy5auexg1w3udubrevr5/panamia.png?rlkey=p7z5ano1jbljfzy1rpua5zxil&dl=0" alt="PanaMia"/>
 			<h2>Panamia Club</h2>
 			<p class="serif" style="margin-bottom:2px;"> October 2022 - </p>
 			<p class="serif content" style="font-size:0.8em; margin-bottom:2px;">A personal project I am working on in my spare time, to help local artists and small-businesses. I am building a platform with the main feature being a directory of local artists, and freelancers. Built with Next.js and MongoDB, deployed on Vercel.</p>
@@ -168,7 +181,7 @@
 
 	<section class="projects d-flex two">
 		<div class="project justify-content-center align-self-center">
-			<img src="https://drive.google.com/uc?export=view&id=1hJ9qaBb1zg4z6zPIjmXdGux3a9yBqu18" alt="Refound"/>
+			<img src="https://dl.dropboxusercontent.com/s/yqffuc60pnbb613lhzg68/reofound.png?rlkey=3sse6okl02sygq3cj1evif301&dl=0" alt="Refound"/>
 			<h2>Refound</h2>
 			<p class="serif" style="margin-bottom:2px;"> May 2022 - </p>
 			<p class="serif content" style="font-size:0.8em; margin-bottom:2px;">For Activate x Wormhole 2022, my team and I build an NFT platform for war time journalists that are facing lack of compensation, and safety concerns. We won the Rebuild for Ukraine Bounty awarded by the NEAR protocol, and at <a href="https://web3athon.xyz/" target="_blank">Web3athon</a> we won 3rd Place for the Celo Disaster Relief bounty. I worked on the frontend, and Solidity smart contracts.</p>
@@ -182,28 +195,9 @@
 		</div>
 	</section>
 
-
-
-	<section class="projects d-flex one">
-		<div class="project justify-content-center align-self-center">
-			<img src="https://drive.google.com/uc?export=view&id=1-j5MQTwTJBBwxdk7jt6-sspbUXRklq79" alt="MCR HUB"/>
-			<h2>Miami Community Radio</h2>
-			<p class="serif" style="margin-bottom:2px;"> Dec 2022 - </p>
-			<p class="serif content" style="font-size:0.8em; margin-bottom:2px;">A personal project to help to South Florida Music scene, and Miami Community Radio. Developed Smart Contracts for membership NFTs with burn mechanisms, and an internal hub for interacting with the smart contract.</p>
-			
-			<div class="row" style="margin-bottom:5px;">
-				<a href="https://www.mcr.watch" target="_blank" class="view-button"> View Website </a>
-			</div>
-			<div class="row">
-				<a href="https://github.com/Miami-Community-Radio" target="_blank" class="view-button"> Github </a>
-			</div>
-		</div>
-	</section>
-
-
 	<section class="projects d-flex two">
 		<div class="project justify-content-center align-self-center"> 
-			<img src="https://drive.google.com/uc?export=view&id=13Lf9QtDlznjUYUEFsxt5trDPA7UYXvff" alt="Alphabet Spaces"/>
+			<img src="https://dl.dropboxusercontent.com/s/5gpasrbwu60utjg2591vf/Screenshot-2024-03-20-at-10.12.03-PM.png?rlkey=h7abzinzi6qub3tz877heite2&dl=0" alt="Alphabet Spaces"/>
 			<h2>Alphabet Spaces</h2>
 			<p class="serif" style="margin-bottom:2px;"> Jun 2022 </p>
 			<p class="serif content" style="font-size:0.8em; margin-bottom:2px;">For <a href="https://pridehacksii.devpost.com/">MLH Pride Hacks 2</a>, I built a decentralized social media platform for LGBTQ+ people to find Safe Spaces and meet other people in the community. Users and followers functionality is handled by DeSo, Spaces are handled in firebase, and the front-end is React. Won the Prize for Best Use of <a href="https://www.deso.org/">DeSo.</a></p>
@@ -215,7 +209,7 @@
 
 	<section class="projects d-flex one">
 		<div class="project justify-content-center align-self-center">
-			<img src="https://drive.google.com/uc?export=view&id=1ncdC6AD3K69cJ95UwmEllxkfWqjdbA2r" alt="Enigma Software Consulting"/>
+			<img src="https://dl.dropboxusercontent.com/s/v7dxfxwl0jrvci95uv2ag/enigmasoftwareconsulting.com.png?rlkey=fk16yigz6win72cu5mq5nihev&dl=0" alt="Enigma Software Consulting"/>
 			<h2>Enigma Software Consulting</h2>
 			<p class="serif" style="margin-bottom:2px;"> February 2022 </p>
 			<p class="serif content" style="font-size:0.8em; margin-bottom:2px;"> I launched my software consulting business along with a website built with React and two.js, and with a blog that is supported by a Firebase database.</p>
@@ -227,7 +221,7 @@
 	
 	<section class="projects d-flex two">
 		<div class="project justify-content-center align-self-center">
-			<img src="https://drive.google.com/uc?export=view&id=175P-QLU4Y6-HuvpkNI_VdIAKnt45BqdQ" alt="EnigmaLabelDAO - Ethereum Dapp to join a Record Label DAO."/>
+			<img src="https://dl.dropboxusercontent.com/s/b32ly00009cu58hza2hi9/SPOTx.png?rlkey=kgjoxu969e9dub1xmbjlsa53d&dl=0" alt="SpotX, Solana/Polygon Dapp for Loyalty Rewards"/>
 			<h2>SPOTx</h2>
 			<p class="serif" style="margin-bottom:2px;"> January 2022 </p>
 			<p class="serif content" style="font-size:0.8em; margin-bottom:2px;"> A Solana(now Polygon) Dapp that allows busineses to create NFT rewards for their loyalty customers. Created as the second use case for <a href="shrimpgame.io">ShrimpGame</a>(NFT AR Game) for MiamiHackWeek2022.</p>
@@ -242,7 +236,7 @@
 
 	<section class="projects d-flex one">
 		<div class="project justify-content-center align-self-center">
-			<img src="https://drive.google.com/uc?export=view&id=1tjnTFJoL70ciFpZogTwcY9Fs9Om9-1oe" alt="EnigmaLabelDAO - Ethereum Dapp to join a Record Label DAO."/>
+			<img src="https://dl.dropboxusercontent.com/s/7hnf2b8eduzluzk72oppm/EnigmaLabelDAO.png?rlkey=lmukobfj3j5qkvejjk0jdzc2r&dl=0" alt="EnigmaLabelDAO - Ethereum Dapp to join a Record Label DAO."/>
 			<h2>EnigmaLabelDao</h2>
 			<p class="serif" style="margin-bottom:2px;"> January 2022 </p>
 			<p class="serif content" style="font-size:0.8em; margin-bottom:2px;"> An Ethereum(Rinkeby) Dapp to join a Record Label DAO(Decentralized Autonomous Organization). Built with React, and 3rdweb. Based on the Build your own DAO with just Javascript Course by <a href="buildspace.so">Buildspace</a>. Blockchain Components: ERC-1155 NFT, custom ERC-20 token($ENIGMA), Governance Contract.</p>
@@ -252,22 +246,9 @@
 		</div>
 	</section>
 
-	<section class="projects d-flex two">
-		<div class="project justify-content-center align-self-center">
-			
-			<img src="https://drive.google.com/uc?export=view&id=1RjL792msNHOXeXJWl5mbnGj8swOcEzW_" alt="LyricPortal - Ethereum Dapp for sharing lyrics"/>
-			<h2>LyricPortal</h2>
-			<p class="serif" style="margin-bottom:2px;"> January 2022 </p>
-			<p class="serif content" style="font-size:0.8em; margin-bottom:2px;"> An Ethereum(Rinkeby) Dapp for sharing lyrics based on the Solidity + Ethereum Smart Contracts Course by <a href="buildspace.so">Buildspace</a>. Built with React.js, Solidity, and Replit for hosting on the Rinkeby testnet. If my testing goes well I will deploy to mainnet for everyone to use and obtain real ETH.</p>
-			<div class="row" style="margin-bottom:5px;">
-				<a href="https://LyricPortal.genesisbarrios1.repl.co" target="_blank" class="view-button"> View Project </a>
-			</div>
-		</div>
-	</section>
-
 	<section class="projects d-flex one">
 		<div class="project justify-content-center align-self-center">
-			<img src="https://drive.google.com/uc?id=1OO0ay-fy6IThnEkeMCp7fQ17NniygSlG" alt="MetaShop - 3D VR Web Shop"/>
+			<img src="https://dl.dropboxusercontent.com/s/kpm0blmsz8vypbhr1tbyb/metashop.png?rlkey=8hjaudw67espotyr7lc1k5vly&dl=0" alt="MetaShop - 3D VR Web Shop"/>
 			<h2>MetaShop</h2>
 			<p class="serif" style="margin-bottom:2px;"> December 2021 </p>
 			<p class="serif content" style="font-size:0.8em; margin-bottom:2px;"> A 3D interactive web store that allows users to interact with items, chat with other users, and request help from the Avaya Webchat agent. This project won 3rd place in the TadHack-Mini Orlando Hackathon at Avaya ENGAGE 2021. Future plans include perfecting the physics and GUI, updating character models in all client views so users can be in the same store together, and either setting it up as an ecommerce platform or setting it up as an NFT store on Etherum.</p>
@@ -282,7 +263,7 @@
 
 	<section class="projects d-flex two">
 		<div class="project justify-content-center align-self-center">
-			<img src="https://drive.google.com/uc?id=1ffpL3s2ejJaFSjNRW23g0moWkCbpcWJT" alt="Wavy Pads Web Synth"/>
+			<img src="https://dl.dropboxusercontent.com/s/c85bhc2mxlo5rzz2ugdic/Screen-Shot-2021-03-14-at-11.33.44-PM.png?rlkey=a0mf2o5upuhbev1ffv19sqjd6&dl=0" alt="Wavy Pads Web Synth"/>
 			<h2>Wavy Pads</h2>
 			<p class="serif"> March 2021 </p>
 			<p class="serif content"> A Web Based Synth with EQ, Gain, Decay, Reverb, Octave, and Key Inputs. Built with two.js.</p>
@@ -294,7 +275,7 @@
 	
 	<section class="projects d-flex one">
 		<div class="project justify-content-center align-self-center">
-			<img src="https://drive.google.com/uc?id=1AQCVEyUjSCshzLvIyqwEMuYjEUTwa8MF"/>
+			<img src="https://dl.dropboxusercontent.com/s/f238sh37xz15dztei88dz/Screenshot-2024-03-20-at-10.28.29-PM.png?rlkey=9jsxxq5m3vc86817au66iwqhp&dl=0"/>
 			<h2>VirtualRollCall</h2>
 			<p class="serif"> April, 2020 </p>
 			<p class="serif content">For my Senior Project my teammate and I recreated the documentation and attendance application for the Pinecrest police department. Built with Angular, and Node.js.</p>
@@ -306,7 +287,7 @@
 
 	<section class="projects d-flex two">
 		<div class="project justify-content-center align-self-center">
-			<img src="https://drive.google.com/uc?id=1kHyPPxqmGHWePdPgrhfEkBP2hxI0s90b"/>
+			<img src="https://dl.dropboxusercontent.com/s/qkx417y4w89aiqhotivp5/youtubecommentapp.png?rlkey=k3hmnz1eldp4j1iu4tjb214iy&dl=0"/>
 			<h2>YouTube Multiple Comment App</h2>
 			<p class="serif"> January, 2020 </p>
 			<p class="serif content">I posted a YouTube video of me singing a song I made for a competition, and I received a lot of comments asking if I could put the song on spotify. I wanted to reply to all of those comments at once, so I made an application to do that for me. I built it with the YouTube API, and Javascript.</p>
