--- a/views/index.ejs
+++ b/views/index.ejs
@@ -158,7 +158,7 @@
 			<img src="https://dl.dropboxusercontent.com/s/h62cze48hc8jhi6nbvtya/stempo.png?rlkey=wtv3fvqea7btj80b6jia1fjds&dl=0" alt="PanaMia"/>
 			<h2>Stempo</h2>
 			<p class="serif" style="margin-bottom:2px;">October 2023 | ETH Lisbon</p>
-			<p class="serif content" style="font-size:0.8em; margin-bottom:2px;">Stempo was created at ETH Lisbon 2023, for the purpose of bringing music rights managements to web3. By using ERC-6551 Tokens it allows for musicians to Create Account NFTs out of their Music that can house individual stems, and allows their works to be packaged for license sale and/or royalty share in additional touch points including their music stems. Fans can collect and trade NFTs with royalties as well. Born at ETH Lisbon 2023, with many years of ideation from my part as I’m a musician and have always had interest in building music applications. </p>
+			<p class="serif content" style="font-size:0.8em; margin-bottom:2px;">Stempo was created at ETH Lisbon 2023, for the purpose of bringing music rights managements to web3. By using ERC-6551tokens it allows for musicians to Create Account NFTs out of their Music that can house individual stems, and allows their works to be packaged for license sale and/or royalty share in additional touch points including their music stems. Fans can collect and trade NFTs with royalties as well. Born at ETH Lisbon 2023, with many years of ideation from my part as I’m a musician and have always had interest in building music applications. I worked on the Front End and Smart Contract integration.</p>
 			
 			<div class="row" style="margin-bottom:5px;">
 				<a href="https://www.stempo.vercel.app" target="_blank" class="view-button"> View Website </a>
