--- a/views/index.ejs
+++ b/views/index.ejs
@@ -129,7 +129,7 @@
 								<p class="bottom-margin white">I got my Bachelor's of Science in Computer Science in Spring of 2020 from Florida International University.</p>
 								<p class="bottom-margin white">I've been working as a Software Engineer for the past four years at Assurant, where I build and support applications in the Azure cloud.</p>
 								<p class="bottom-margin white">I'm a Full Stack Engineer having worked with various technologies including Javascript, JQuery, Angular, React, Node.js, MongoDB, Firebase, SQL, MySQL, MicrosoftSQL, Tomcat, Java, C#, .NET, and Web GL(Babylon.js, Three.js).</p>
-								<p class="bottom-margin white">I'm currently dedicating my free time to learning and building with Web3 technologies like Soldiity and Web3.js. I love building creative solutions for myself and others, and I offer support through <a href='https://www.enigmasoftwareconsulting.com' style='font-weight:bold;' target='_blank'>Enigma Software Consulting.</p>
+								<p class="bottom-margin white">I'm currently dedicating my free time to learning and building with Web3 technologies like Soldiity and Web3.js. I love building creative solutions for myself and others, and I offer support through <a href='https://www.enigma-labs.com' style='font-weight:bold;' target='_blank'>Enigma Labs.</p>
 							</div>
 						</div>
 						<div class="col-1">
