--- a/views/index.ejs
+++ b/views/index.ejs
@@ -154,6 +154,30 @@
 	</div>
 
 	<section class="projects d-flex one">
+		<div class="project justify-content-center align-self-center"> 
+			<img src="https://dl.dropboxusercontent.com/s/tajdsorx5orutffrzm47j/twitter-banner.png?rlkey=x569kx3odu5dbrzdrf6jn7iaw&st=kusyr3s5&dl=0" alt="influanto"/>
+			<h2>Influanto</h2>
+			<p class="serif" style="margin-bottom:2px;"> June 2024 </p>
+			<p class="serif content" style="font-size:0.8em; margin-bottom:2px;"> As a part of Nights & Weekends s5 hosted by <a href="buildspace.so" target="_blank">Builspace</a> I have taken the leap and started building one of the ideas I've had for a while which is an all in one marketing tool for musicians and content creators. Built with Next.js.</p>
+			<div class="row" style="margin-bottom:5px;">
+				<a href="https://www.influanto.com" target="_blank" class="view-button"> View Website </a>
+			</div>
+		</div>
+	</section>
+
+	<section class="projects d-flex two">
+		<div class="project justify-content-center align-self-center">
+			<img src="https://dl.dropboxusercontent.com/s/9qx08f0n4yg1rt41jbheg/no-rules.png?rlkey=mgdzqkmepnmrw8fxkih22khpd&st=88svn7oc&dl=0" alt="Enigma Software Consulting"/>
+			<h2>Enigma Labs</h2>
+			<p class="serif" style="margin-bottom:2px;"> June 2024 </p>
+			<p class="serif content" style="font-size:0.8em; margin-bottom:2px;"> I launched my consulting business along with a website built with React and two.js, and with a blog that is supported by a Firebase database.</p>
+			<div class="row" style="margin-bottom:5px;">
+				<a href="https://www.enigma-labs.com" target="_blank" class="view-button"> View Website </a>
+			</div>
+		</div>
+	</section>
+
+	<section class="projects d-flex one">
 		<div class="project justify-content-center align-self-center">
 			<img src="https://dl.dropboxusercontent.com/s/h62cze48hc8jhi6nbvtya/stempo.png?rlkey=wtv3fvqea7btj80b6jia1fjds&dl=0" alt="PanaMia"/>
 			<h2>Stempo</h2>
@@ -166,7 +190,7 @@
 		</div>
 	</section>
 	
-	<section class="projects d-flex one">
+	<section class="projects d-flex two">
 		<div class="project justify-content-center align-self-center">
 			<img src="https://dl.dropboxusercontent.com/s/lvy5auexg1w3udubrevr5/panamia.png?rlkey=p7z5ano1jbljfzy1rpua5zxil&dl=0" alt="PanaMia"/>
 			<h2>Panamia Club</h2>
@@ -179,7 +203,7 @@
 		</div>
 	</section>
 
-	<section class="projects d-flex two">
+	<section class="projects d-flex one">
 		<div class="project justify-content-center align-self-center">
 			<img src="https://dl.dropboxusercontent.com/s/yqffuc60pnbb613lhzg68/reofound.png?rlkey=3sse6okl02sygq3cj1evif301&dl=0" alt="Refound"/>
 			<h2>Refound</h2>
@@ -206,20 +230,8 @@
 			</div>
 		</div>
 	</section>
-
-	<section class="projects d-flex one">
-		<div class="project justify-content-center align-self-center">
-			<img src="https://dl.dropboxusercontent.com/s/v7dxfxwl0jrvci95uv2ag/enigmasoftwareconsulting.com.png?rlkey=fk16yigz6win72cu5mq5nihev&dl=0" alt="Enigma Software Consulting"/>
-			<h2>Enigma Software Consulting</h2>
-			<p class="serif" style="margin-bottom:2px;"> February 2022 </p>
-			<p class="serif content" style="font-size:0.8em; margin-bottom:2px;"> I launched my software consulting business along with a website built with React and two.js, and with a blog that is supported by a Firebase database.</p>
-			<div class="row" style="margin-bottom:5px;">
-				<a href="https://www.enigmasoftwareconsulting.com" target="_blank" class="view-button"> View Website </a>
-			</div>
-		</div>
-	</section>
 	
-	<section class="projects d-flex two">
+	<section class="projects d-flex one">
 		<div class="project justify-content-center align-self-center">
 			<img src="https://dl.dropboxusercontent.com/s/b32ly00009cu58hza2hi9/SPOTx.png?rlkey=kgjoxu969e9dub1xmbjlsa53d&dl=0" alt="SpotX, Solana/Polygon Dapp for Loyalty Rewards"/>
 			<h2>SPOTx</h2>
@@ -234,7 +246,7 @@
 		</div>
 	</section>
 
-	<section class="projects d-flex one">
+	<section class="projects d-flex two">
 		<div class="project justify-content-center align-self-center">
 			<img src="https://dl.dropboxusercontent.com/s/7hnf2b8eduzluzk72oppm/EnigmaLabelDAO.png?rlkey=lmukobfj3j5qkvejjk0jdzc2r&dl=0" alt="EnigmaLabelDAO - Ethereum Dapp to join a Record Label DAO."/>
 			<h2>EnigmaLabelDao</h2>
