--- a/views/index.ejs
+++ b/views/index.ejs
@@ -158,7 +158,7 @@
 			<img src="https://dl.dropboxusercontent.com/s/tajdsorx5orutffrzm47j/twitter-banner.png?rlkey=x569kx3odu5dbrzdrf6jn7iaw&st=kusyr3s5&dl=0" alt="influanto"/>
 			<h2>Influanto</h2>
 			<p class="serif" style="margin-bottom:2px;"> June 2024 </p>
-			<p class="serif content" style="font-size:0.8em; margin-bottom:2px;"> As a part of Nights & Weekends s5 hosted by <a href="buildspace.so" target="_blank">Builspace</a> I have taken the leap and started building one of the ideas I've had for a while which is an all in one marketing tool for musicians and content creators. Built with Next.js.</p>
+			<p class="serif content" style="font-size:0.8em; margin-bottom:2px;"> As a part of Nights & Weekends Season 5 hosted by <a href="buildspace.so" target="_blank">Builspace</a> I have taken the leap and started building one of the ideas I've had for a while which is an all in one marketing tool for musicians and content creators. Built with Next.js.</p>
 			<div class="row" style="margin-bottom:5px;">
 				<a href="https://www.influanto.com" target="_blank" class="view-button"> View Website </a>
 			</div>
